--- a/backend/success.html
+++ b/backend/success.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Your Orrder hhas been delivered</h1>
+    <h1>Your Order has been received</h1>
 </body>
 </html>
